# opengl-practice

./: CMakeLists.txt  example.cpp  main.cpp
glad/: gl.h
src/: app.cpp
